--- a/.github/workflows/aditya-deploy.yaml
+++ b/.github/workflows/aditya-deploy.yaml
@@ -7,7 +7,7 @@ on:
       - main
 
 env:
-  AWS_REGION: ap-south-1                   # set this to your preferred AWS region, e.g. us-west-1
+  AWS_REGION: ap-south-1                   # set this to your preferred AWS region, e.g. ap-south-1
   ECR_REPOSITORY: nodejs-app           # set this to your Amazon ECR repository name
   ECS_SERVICE: AdityaClusterService                 # set this to your Amazon ECS service name
   ECS_CLUSTER: AdityaCluster                 # set this to your Amazon ECS cluster name
