--- a/.github/workflows/aditya-deploy.yaml
+++ b/.github/workflows/aditya-deploy.yaml
@@ -8,12 +8,12 @@ on:
 
 env:
   AWS_REGION: ap-south-1                   # set this to your preferred AWS region, e.g. ap-south-1
-  ECR_REPOSITORY: nodejs-app           # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: nodejs-app01           # set this to your Amazon ECR repository name
   ECS_SERVICE: AdityaClusterService                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: AdityaCluster                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: AdityaTaskDefinition-revision1.json # set this to the path to your Amazon ECS task definition
+  ECS_CLUSTER: AdityaCluster01                 # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: AdityaTaskDefinition01-revision1.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: nodejs-app           # set this to the name of the container in the
+  CONTAINER_NAME: nodejs-app01           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 jobs:
